swagger , 54 route , 7 non triviales , fix un truc aux backend
